<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AI-Projekt</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="titel_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera_view">CameraView</string>
    <string name="button_picture">Take a Picture</string>
    <string name="title_activity_smal_camera_view">SmalCameraView</string>
    <string name="button_small_picture">Take a small Picture</string>
    <string name="title_activity_open_cvexample">Bla</string>
    <string name="button_opencv_picture">Take a OpenCV Picture</string>
    <string name="title_activity_open_cvimage">OpenCVImage</string>
    <string name="button_opencv_exapmle">OpenCV Image</string>
    <string name="button_opencv_gray">Convert Image to Grayscale </string>
    <string name="button_opencv_gaussianblur">Convert Image to GaussianBlur</string>
    <string name="button_hough_circle">Show a Circle</string>
    <string name="button_opencv_normal">Show Image</string>
    <string name="title_activity_show_shape">ShowShape</string>

</resources>