<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_opencv_normal"
        android:onClick="showImage"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_opencv_gray"
        android:onClick="grayImage"/>
    
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_opencv_gaussianblur"
        android:onClick="gaussianBlurImage"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_hough_circle"
        android:onClick="HoughCircle"/>
    
    
	<ImageView
        android:contentDescription="@+id/gray_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
</LinearLayout>