<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	
    <!--  
    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:hint="@string/edit_message" />
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>
    -->
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_picture"
        android:onClick="takePicture"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_small_picture"
        android:onClick="takeSmallPicture"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_opencv_picture"
        android:onClick="takeOpenCVPicture"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_opencv_exapmle"
        android:onClick="OpenCVImage"/>
    </LinearLayout>